# Parallel-Compiler

./: .gitignore  CMakeLists.txt  README.md  driver.cpp
doc/: 技术报告.md  测试结果.docx
include/dialect/: CMakeLists.txt  Dialect.h  EffectInterface.h  EffectInterface.td  LiveVarAnalysis.h  Ops.td  Passes.h  ReachingDefAnalysis.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  test.h
include/frontend/: SymbolTable.h  SysYBaseVisitor.h  SysYLexer.h  SysYParser.h  SysYVisitor.h  SysYVisitorImpl.h
lib/dialect/: CMakeLists.txt  Combine.cpp  Combine.td  DCEPass.cpp  DataFlowFramework.cpp  Dialect.cpp  EffectInterface.cpp  InlinerExtension.cpp  LiveVarAnalysis.cpp  LoopFusion.cpp  LowerSysyPass.cpp  ReachingDefAnalysis.cpp  ShapeInferencePass.cpp  SimplifyRedundantTransposePass.cpp  SysyOptPass.cpp
lib/frontend/: SymbolTable.cpp  SysYBaseVisitor.cpp  SysYLexer.cpp  SysYParser.cpp  SysYVisitor.cpp  SysYVisitorImpl.cpp
test/: build.py  compile_library.py  compile_object.py  copy_in.py  test_all_custom_cases.py  test_official_cases.py  test_pair_custom_cases.py  test_single_custom_case.py
test/testcase/TestSysy/: 00_Binary1.sy  01_Binary2.sy  02_Binary3.sy  03_ConvSame1.sy  04_ConvSame2.sy  05_ConvSame3.sy  06_ConvVal1.sy  07_ConvVal2.sy  08_ConvVal3.sy  09_MatMul1.sy  10_MatMul2.sy  11_MatMul3.sy  12_MatMulVec1.sy  13_MatMulVec2.sy  14_MatMulVec3.sy  15_Reduction1.sy  16_Reduction2.sy  17_Reduction3.sy  18_Transpose1.sy  19_Transpose2.sy  20_Transpose3.sy
test/testcase/TestTensor/: 00_Binary1.sy  01_Binary2.sy  02_Binary3.sy  03_ConvSame1.in  03_ConvSame1.sy  04_ConvSame2.sy  05_ConvSame3.sy  06_ConvVal1.in  06_ConvVal1.sy  07_ConvVal2.sy  08_ConvVal3.sy  09_MatMul1.in  09_MatMul1.sy  10_MatMul2.sy  11_MatMul3.in  11_MatMul3.sy  12_MatMulVec1.in  12_MatMulVec1.sy  13_MatMulVec2.sy  14_MatMulVec3.sy  15_Reduction1.sy  16_Reduction2.sy  17_Reduction3.sy  18_Transpose1.sy  19_Transpose2.sy  20_Transpose3.sy
test/testcase/tensor/: tensorBinary.sy  tensorBinary2.sy  tensorBroadcast.sy  tensorClear.sy  tensorConv.sy  tensorConv2.sy  tensorConv3.sy  tensorCopy.sy  tensorDCE.sy  tensorDef.sy  tensorFlatten.sy  tensorFuncDef.sy  tensorFuncDef2.sy  tensorMatMul.sy  tensorMatMul2.sy  tensorMatMulOpt.sy  tensorMatMulOpt2.sy  tensorPool.sy  tensorReLU.sy  tensorReduction.sy  tensorScan.sy  tensorShapeInference.sy  tensorShapeInference2.sy  tensorShapeInference3.sy  tensorShapeInference4.sy  tensorTranspose.sy  tensorTranspose2.sy  tensorWhile.sy  tensorWhile2.sy
